--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-DATABASE_URL=postgresql://postgres:Snigdha1234$@localhost:5432/todo_db
+DATABASE_URL=postgresql://postgres:password@localhost:5432/todo_db
 SECRET_KEY=change_this_secret_key
